--- a/pokemon.html
+++ b/pokemon.html
@@ -53,7 +53,7 @@
 	</style>
 </head>
 <body>
-	<audio id="myAudio" autoplay="true" loop="true">
+	<audio id="myAudio" autoplay="true" loop="true" preload= "true">
 	  <source src="https://www.cjoint.com/doc/18_09/HIkpnJ4y0Fw_generique-francais-de-la-saison-1-de-pokemon.mp3" type="audio/mp3">
 	</audio>
 
