--- a/pokemonGBA.html
+++ b/pokemonGBA.html
@@ -59,6 +59,9 @@ button{
   </style>
 </head>
 <body>
+   <audio id="myAudio" autoplay="true" loop="true" preload="true">
+    <source src="https://www.cjoint.com/doc/18_09/HIkpnJ4y0Fw_generique-francais-de-la-saison-1-de-pokemon.mp3" type="audio/mp3">
+  </audio>
   <div id="poke">
     <img src="https://i.ibb.co/87P3jzJ/logo.png" id="logo">
   </div>
